(UPD) add font al brand e screen

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <title>calculator</title>
     <link rel="stylesheet" href="style.css">
-    <!-- @font-face{font-family:seven segment;font-style:normal;font-weight:400;src:local('Seven Segment'),url('https://fonts.cdnfonts.com/s/71640/Seven Segment.woff') format('woff')} -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100..900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="conteiner-flex">
         <div class="calcolatrice dimension d-flex col justify-center align-center">
-            <div class="brand"></div>
-            <div class="screen"></div>
+            <div class="brand">BOOSIO</div>
+            <div class="screen">
+                <div class="zero">0</div>
+            </div>
             <div class="calculator d-flex wrap row-calc padding-calc align gap">
                 <div class="square">1</div>
                 <div class="square">2</div>
