(UPD) add style ai tasti

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 <div class="zero">0</div>
             </div>
             <div class="calculator d-flex wrap row-calc padding-calc align gap">
-                <div class="square">1</div>
-                <div class="square">2</div>
-                <div class="square">3</div>
-                <div class="square">4</div>
-                <div class="square">5</div>
-                <div class="square">6</div>
-                <div class="square">7</div>
-                <div class="square">8</div>
-                <div class="square">9</div>
-                <div class="square square-basis">10</div>
-                <div class="square">11</div>
+                <button class="square b-gray outset">7</button>
+                <button class="square b-gray outset">8</button>
+                <button class="square b-gray outset">9</button>
+                <button class="square b-gray outset">4</button>
+                <button class="square b-gray outset">5</button>
+                <button class="square b-gray outset">6</button>
+                <button class="square b-gray outset">1</button>
+                <button class="square b-gray outset">2</button>
+                <button class="square b-gray outset">3</button>
+                <button class="square square-basis b-gray outset">0</button>
+                <button class="square b-orange outset">=</button>
             </div>
             
                 
