--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
             <div class="screen">
                 <div class="zero">0</div>
             </div>
-            <div class="calculator d-flex wrap row-calc padding-calc align gap">
-                <button class="square b-gray outset">7</button>
-                <button class="square b-gray outset">8</button>
-                <button class="square b-gray outset">9</button>
-                <button class="square b-gray outset">4</button>
-                <button class="square b-gray outset">5</button>
-                <button class="square b-gray outset">6</button>
-                <button class="square b-gray outset">1</button>
-                <button class="square b-gray outset">2</button>
-                <button class="square b-gray outset">3</button>
-                <button class="square square-basis b-gray outset">0</button>
-                <button class="square b-orange outset">=</button>
+            <div class="numbers d-flex">
+                <div class="numbers d-flex wrap row-calc">
+                    <button class="square b-gray outset">7</button>
+                    <button class="square b-gray outset">8</button>
+                    <button class="square b-gray outset">9</button>
+                    <button class="square b-gray outset">4</button>
+                    <button class="square b-gray outset">5</button>
+                    <button class="square b-gray outset">6</button>
+                    <button class="square b-gray outset">1</button>
+                    <button class="square b-gray outset">2</button>
+                    <button class="square b-gray outset">3</button>
+                    <button class="square square-basis b-gray outset">0</button>
+                    <button class="square b-orange outset">=</button>
+                </div>
+                <div class="operators d-flex wrap column-op">
+                    <button class="square-operators orange-op outset">C</button>
+                    <button class="square-operators b-green outset">+</button>
+                    <button class="square-operators b-green outset">-</button>
+                    <button class="square-operators b-green outset">*</button>
+                    <button class="square-operators b-green outset">/</button>
+                </div>
             </div>
             
                 
