(UPD) remove altezze fisse

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="zero">0</div>
             </div>
             <div class="numbers d-flex">
-                <div class="numbers d-flex wrap row-calc">
+                <div class="numbers d-flex wrap row-calc padding-calc">
                     <button class="square b-gray outset">7</button>
                     <button class="square b-gray outset">8</button>
                     <button class="square b-gray outset">9</button>
